# vidhan_ai

./: .gitignore  api.py  ingest.py  main.py  pyproject.toml  rag.py  test_rag.py  vidhan_ai_test_results_2026-02-09.txt
frontend/: README.md  index.html  package-lock.json
frontend/src/app/: App.tsx
frontend/src/app/components/: AnswerDisplay.tsx  DisclaimerBanner.tsx  QueryInput.tsx
frontend/src/styles/: fonts.css
